# private_practice

./: .dockerignore  .gitignore  .output.txt  Dockerfile  LICENCE.md  README.md  base_data 2.json  cli.sqlite3  docker-compose.dev 2.yml  docker-compose.dev.yml  dump.rdb  justfile  main.py  manage.py  nixpacks.toml  package-lock.json  pyproject.toml  translate_po.py
accounts/: admin.py  forms 2.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/widgets/: turnstile.py
ai_chat/: models.py  views.py
ai_chat/templatetags/: custom_tags.py
assets/: staticfiles.json
assets/css/: alky.6b3ef6d18e8f.css  alky.882ab650f49b.css  alky.css  alky.css.map  alky.dfe88c955ac1.css  alky.scss  animation.74d425992f73.css  animation.css  dreamy.05b58aafff3c.css  dreamy.10652186c6eb.css  dreamy.65641129bf57.css  dreamy.84096b84e50d.css  dreamy.css  dreamy.css.60e7e5079120.map  dreamy.css.map  styles.67d6ce07cc3f.css  styles.css
assets/js/: splash.14baf8effa39.js
base/: choices.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py
base/templatetags/: clean_text 2.py  clean_text.py  hx_helpers.py
my_numbers/: choices.py  forms 2.py  forms.py  models.py
my_numbers/migrations/: 0001_initial 2.py  0001_initial.py  0002_rename_fee_transactionmodel_amount_and_more 2.py  0003_transactionmodel_recurrent_reportmodel_and_more.py  0004_rename_income_transactionmodel_is_income_and_more.py  0005_reportmodel_tax_year_alter_reportmodel_quarter_and_more.py  0006_reportmodel_year_start 2.py
ppm_app/: .env.dk  asgi.py  justfile  manage.py  settings.py  urls.py
ppm_app/accounts/: urls.py  views.py
ppm_app/calendar_app/: admin.py  choices.py  conf.py  forms.py  models.py  urls.py  utils.py  views.py
ppm_app/ppm_app/: .env  settings.ini  settings.py  urls.py  wsgi.py
ppm_app/responses/: hx_responses.py
ppm_app/room_calendar_app/: admin.py  apps.py  calendar_utils.py  choices.py  forms.py  models.py  my_widgets.py  tests.py  urls.py  views.py
ppm_app/session_client/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py  views.py
ppm_app/settings/: base.py  dev.py  prod.py
ppm_app/templates/: 404.html  _base.html  _modal_ok_response.html  _ok.html  _toasts.html  _ups.html
ppm_app/tests/: playwright.py
ppm_app/tools/: choices.py  urls.py  views.py
responses/: hx_responses.py
room_calendar_app/: admin.py  calendar_utils.py  choices.py  forms.py  models.py  querysets.py  signals.py  tests.py  tests_post.py  urls.py  views.py
room_calendar_app/migrations/: 0001_initial.py  0002_alter_tenantmodel_calendar.py  0002_blocksmodel_monthly_cost.py  0002_remove_event_client.py  0003_blocksmodel.py  (+3 more)
session_client/: admin.py  choices.py  forms.py  models.py  querysets.py  tests.py  tests_post.py  urls.py  utils.py  views.py  views_client.py  views_session.py  views_time.py  widgets.py
src/: cli.sqlite3  main.py  manage.py
templates/: _base.html  _modal.html  _modal_ok_response.html  _toast_content.html  _toasts.html  _ups.html
(+369 files in other folders)
