[project]
name = "private-practice-manager"
version = "0.1.0"
description = "App to help therapist handle their admin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.12.0",
    "asgiref==3.11.0",
    "asttokens==3.0.1",
    "bleach>=6.3.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "cython==3.2.3",
    "django==6.0",
    "django-bootstrap5==25.3",
    "django-browser-reload==1.21.0",
    "django-htmx==1.27.0",
    "django-pivot>=1.10.0",
    "docutils==0.22.4",
    "greenlet==3.3.0",
    "gunicorn>=23.0.0",
    "idna==3.11",
    "ipython==9.8.0",
    "markdown>=3.10",
    "numpy==2.4.0",
    "pendulum>=3.1.0,<4",
    "pgvector==0.4.2",
    "pillow>=12.0.0",
    "playwright==1.58.0",
    "polib>=1.2.0",
    "psycopg2>=2.9.10,<3",
    "python-decouple>=3.8,<4",
    "setuptools>=80.9.0",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "whitenoise==6.11.0",
]
