[project]
name = "private-practice-manager"
version = "0.1.0"
description = "App to help therapist handle their admin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.12.1",
    "asgiref==3.11.1",
    "asttokens==3.0.1",
    "bleach>=6.3.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "cython==3.2.4",
    "django==6.0.3",
    "django-allauth>=65.15.0",
    "django-bootstrap5==26.2",
    "django-browser-reload==1.21.0",
    "django-htmx==1.27.0",
    "docutils==0.22.4",
    "greenlet==3.3.2",
    "gunicorn==25.1.0",
    "idna==3.11",
    "ipython==9.11.0",
    "markdown==3.10.2",
    "numpy>=2.4",
    "pendulum==3.2.0",
    "pgvector>=0.4.2",
    "pillow==12.1.1",
    "playwright==1.58.0",
    "polib>=1.2.0",
    "psycopg2==2.9.11",
    "python-decouple>=3.8,<4",
    "requests>=2.32.5",
    "resend>=2.24.0",
    "sentry-sdk>=2.54.0",
    "setuptools==82.0.1",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "whitenoise==6.12.0",
]
