[project]
name = "dreamy-admin"
version = "0.1.5"
description = "App to help therapist handle their admin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "bleach>=6.3.0",
    "django==6.0.3",
    "django-allauth>=65.15.0",
    "django-bootstrap5==26.2",
    "django-htmx==1.27.0",
    "docutils==0.22.4",
    "gunicorn==25.1.0",
    "markdown==3.10.2",
    "pendulum==3.2.0",
    "pgvector>=0.4.2",
    "pillow==12.1.1",
    "psycopg2==2.9.11",
    "python-decouple>=3.8,<4",
    "resend>=2.24.0",
    "sentry-sdk>=2.54.0",
    "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
    "django-browser-reload==1.21.0",
    "ipython>=9.13.0",
    "playwright==1.58.0",
]


[tool.uv]
managed = true
package = true

[project.scripts]
dreamy = "dreamy_admin.main:main"


[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"
